test_cases/negative/type_mismatch_builtin.snek
export DEFAULT = 1 > Add("Hello");
